@@ -1,3 +1,9 @@
+2003-12-05  Mark Kettenis  <kettenis@gnu.org>
+
+	From Ulrich Weigand  <weigand@informatik.uni-erlangen.de>:
+	* dwarf2-frame.c (dwarf2_frame_cache): Use the untranslated RA
+	column instead of translating it.
+
 2003-12-04  Michael Chastain  <mec.gnu@mindspring.com>
 
 	Partial fix for PR c++/1465.
